--- a/happy/happy.css
+++ b/happy/happy.css
@@ -38,10 +38,11 @@ div {
 }
 
 .title {
-    font-size: 3rem;
+    font-size: 2rem;
     margin: 0;
     padding-left: 5vw;
-    text-align: center;
+    text-align: left;
+    white-space: nowrap;
 }
 
 @keyframes highlighter {
