--- a/index.css
+++ b/index.css
@@ -3,11 +3,7 @@ html {
 }
 
 body {
-    overflow-x: hidden;
-    position: relative;
-    /* background-image: url(homeBackground.jpg); */
-    /* background-repeat: no-repeat;
-    background-size: cover; */
+    background-size: cover;
     margin: 1vw;
     margin-right: 10vw;
     margin-left: 10vw;
@@ -122,6 +118,7 @@ div {
 
 #footer {
     width: 100%;
+    padding-top: 50vh;
 }
 
 #rowFill {
